--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
 <body class="container-fluid">
 <!-- Header -->
 <header class="row">
+
+    <a class="logo-item item col-s-2" href="/">
+        <img class="logo" src="public/images/logo-supermovies.png" alt="logo superMovies">
+    </a>
+
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-sm navbar-static-top">
         <ul id="header-navigation" class="nav navbar-nav collapse navbar-collapse row">
-            <li class="logo-item item col-s-2">
-                <a href="/">
-                    <img class="logo" src="public/images/logo-supermovies.png" alt="logo superMovies">
-                </a>
-            </li>
-
             <li class="propos-item nav-item col-s-1">
                 <a href="/infos">A propos</a>
             </li>
@@ -48,12 +47,6 @@
             <li class="contact-item nav-item col-s-1">
                 <a href="/contact">Contact</a>
             </li>
-
-            <li class="search-logout-item nav-item col-s-1">
-                <span class="glyphicon glyphicon-search"></span>
-
-                <a class="logout-item" href="/logout">Déconnexion</a>
-            </li>
         </ul>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-navigation"
@@ -62,168 +55,73 @@
         </button>
     </nav>
 
+    <div class="search-logout-item nav-item col-s-1">
+        <span class="glyphicon glyphicon-search"></span>
+        <a class="logout-item" href="/logout">Déconnexion</a>
+    </div>
+
 
 </header>
 
 <!-- Application Root & Content -->
-<section id="app" class="main-content row">
-
-    <div class="accueil-content">
-        <div class="main-hook">
-            <div class="first-hook">
-                <p class="best-week-movie-hook">Last week, the winner was :</p>
-                <p class="best-week-movie"></p>
-                <p class="all-votes"><span class="movie-votes"></span><span class="week-votes"></span></p>
-            </div>
-
-            <div class="second-hook">
-                <div class="lign1"></div>
-                <p class="first-lines-hook"><span class="bold-style">Votez pour votre film préféré</span><br/>
-                    et découvrez le classement
-                </p>
-            </div>
-
-            <p class="last-lines"> au fil des jours !</p>
-
-            <p class="members-hook">Déjà <span class="members-number"></span> membres</p>
-
-            <button type="submit" class="connexion-btn btn">CONNEXION</button>
-            <button type="submit" class="inscription-btn btn">INSCRIPTION</button>
-
-        </div>
-    </div>
-</section>
+<section id="app" class="main-content row"></section>
 
 <footer class="row">
-    <ul class="footer-row col-xs">
-        <li class="logo-item item col-s-2">
-            <a href="/">
-                <img class="logo" src="public/images/logo-supermovies.png" alt="logo superMovies">
-            </a>
-        </li>
-        <ul class="footer-links nav navbar-nav">
-            <li class="propos-item nav-item col-s-1">
-                <a href="/">A propos</a>
+    <div class="footer-row col-xs">
+        <ul>
+            <li class="logo-item item col-s-2">
+                <a href="/">
+                    <img class="logo" src="public/images/logo-supermovies.png" alt="logo superMovies">
+                </a>
             </li>
+            <ul class="footer-links nav navbar-nav">
+                <li class="propos-item nav-item col-s-1">
+                    <a href="/">A propos</a>
+                </li>
 
-            <li class="movies-item nav-item col-s-1">
-                <a href="/movies">Films</a>
-            </li>
+                <li class="movies-item nav-item col-s-1">
+                    <a href="/movies">Films</a>
+                </li>
 
-            <li class="historical-item nav-item col-s-1">
-                <a href="/historical">Historique</a>
-            </li>
+                <li class="historical-item nav-item col-s-1">
+                    <a href="/historical">Historique</a>
+                </li>
 
-            <li class="contact-item nav-item col-s-1">
-                <a class="contact-item" href="/contact">Contact</a>
+                <li class="contact-item nav-item col-s-1">
+                    <a class="contact-item" href="/contact">Contact</a>
+                </li>
+            </ul>
+
+            <li class="media-items">
+                <div class="media-item nav-item">
+                    <a class="facebook-item" href="/facebook">
+                        <img class="fb-icon icon" src="public/images/ic-facebook.png" alt="icone facebook">
+                    </a>
+
+                    <a class="pinterest-item" href="/pinterest">
+                        <img class="pint-icon icon" src="public/images/ic-pinterest.png" alt="icone pinterest">
+                    </a>
+                </div>
+
+                <div class="media-item nav-item">
+                    <a class="twitter-item" href="/twitter">
+                        <img class="tw-icon icon" src="public/images/ic-twitter.png" alt="icone twitter">
+                    </a>
+
+                    <a class="instagram-item" href="/instagram">
+                        <img class="inst-icon icon" src="public/images/ic-linkedin.png" alt="icone instagram">
+                    </a>
+                </div>
+
             </li>
         </ul>
+    </div>
 
-        <ul class="media-items">
-            <li class="media-item nav-item">
-                <a class="facebook-item" href="/facebook">
-                    <img class="fb-icon icon" src="public/images/ic-facebook.png" alt="icone facebook">
-                </a>
-
-                <a class="pinterest-item" href="/pinterest">
-                    <img class="pint-icon icon" src="public/images/ic-pinterest.png" alt="icone pinterest">
-                </a>
-
-                <a class="twitter-item" href="/twitter">
-                    <img class="tw-icon icon" src="public/images/ic-twitter.png" alt="icone twitter">
-                </a>
-
-                <a class="instagram-item" href="/instagram">
-                    <img class="inst-icon icon" src="public/images/ic-linkedin.png" alt="icone instagram">
-                </a>
-            </li>
-        </ul>
-
-    </ul>
 </footer>
 
+<script type="text/javascript" src="public/js/route.js"></script>
+<script type="text/javascript" src="public/js/router.js"></script>
 <script type="text/javascript" src="public/js/app.js"></script>
-
-<!-- Error Template -->
-<script id="error-template" type="text/html">
-
-        </script>
-
-<!-- A propos Template -->
-<script id="a-propos-template" type="text/html">
-
-        </script>
-
-<!-- Movies Template -->
-<script id="movies-template" type="text/html">
-    <ul class="pagination">
-        <li><a href="#">&laquo;</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">&raquo;</a></li>
-    </ul>
-</script>
-
-<!-- Historical Template -->
-<script id="historical-template" type="text/html">
-
-        </script>
-
-<!-- Contact Template -->
-<script id="contact-template" type="text/html">
-
-        </script>
-
-<!-- Pagination -->
-<!-- TO DO : convertir le jquery en js -->
-<script>
-    var show_per_page = 3;
-    var current_page = 0;
-
-    function set_display(first, last) {
-        document.querySelector('#content').childNodes.css('display', 'none');
-        document.querySelector('#content').childNodes.slice(first, last).css('display', 'block');
-    }
-
-    function previous() {
-        if (document.querySelector('.active').prev('.page_link').length) go_to_page(current_page - 1);
-    }
-
-    function next() {
-        if (document.querySelector('.active').next('.page_link').length) go_to_page(current_page + 1);
-    }
-
-    function go_to_page(page_num) {
-        current_page = page_num;
-        start_from = current_page * show_per_page;
-        end_on = start_from + show_per_page;
-        set_display(start_from, end_on);
-        document.querySelector('.active').classList.remove('active');
-        document.querySelector('#id' + page_num).classList.add('active');
-    }
-
-    document.querySelector(document).ready(function () {
-
-        var number_of_pages = Math.ceil(document.querySelector('#content').childNodes.length / show_per_page);
-
-        var nav = '<ul class="pagination"><li><a href="javascript:previous();">&laquo;</a>';
-
-        var i = -1;
-        while (number_of_pages > ++i) {
-            nav += '<li class="page_link'
-            if (!i) nav += ' active';
-            nav += '" id="id' + i + '">';
-            nav += '<a href="javascript:go_to_page(' + i + ')">' + (i + 1) + '</a>';
-        }
-        nav += '<li><a href="javascript:next();">&raquo;</a></ul>';
-
-        document.querySelector('#page_navigation').html(nav);
-        set_display(0, show_per_page);
-
-    });
-
-</script>
 
 <!-- Bootstrap -->
 <script src="public/https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
