display templates ok, API connexion in progress

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- Header -->
 <header class="row">
 
-    <a class="logo-item item col-s-2" href="#accueil">
+    <a class="logo-item item col-s-2" href="/">
         <img class="logo" src="public/images/logo-supermovies.png" alt="logo superMovies">
     </a>
 
@@ -115,8 +115,9 @@
     </div>
 </footer>
 
-<script src="public/js/route.js"></script>
-<script src="public/js/router.js"></script>
+<script src="public/js/utils.js"></script>
+<script src="public/js/route1.js"></script>
+<script src="public/js/router1.js"></script>
 <script src="public/js/app.js"></script>
 
 <!-- Bootstrap -->
