inscription page ok, connexion page in progress

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 </footer>
 
 <script src="public/js/utils.js"></script>
-<script src="public/js/route1.js"></script>
-<script src="public/js/router1.js"></script>
+<script src="public/js/route.js"></script>
+<script src="public/js/router.js"></script>
 <script src="public/js/app.js"></script>
 
 <!-- Bootstrap -->
