connexion page ok, movies page in progress

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </li>
             <ul class="footer-links nav navbar-nav">
                 <li class="propos-item nav-item col-s-1">
-                    <a href="#infos">A propos</a>
+                    <a href="#infos">À propos</a>
                 </li>
 
                 <li class="movies-item nav-item col-s-1">
@@ -116,6 +116,8 @@
 </footer>
 
 <script src="public/js/utils.js"></script>
+<script src="public/js/http.js"></script>
+<script src="public/js/pageActions.js"></script>
 <script src="public/js/route.js"></script>
 <script src="public/js/router.js"></script>
 <script src="public/js/app.js"></script>
