site connexion in progress

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="container-fluid">
+<body id="body" class="container-fluid">
 <!-- Header -->
 <header class="row">
 
@@ -56,7 +56,7 @@
 
     <div class="search-logout-item nav-item col-s-1">
         <span class="fas fa-search"></span>
-        <a class="logout-item" href="/logout">Déconnexion</a>
+        <a id="logout-item" href="#deconnexion">Déconnexion</a>
     </div>
 </header>
 
