userConnected & templates in progress

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Fonts -->
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Fira+Sans:100,200,300,400,700&display=swap');
     </style>
 
     <!-- SuperMovies style -->
@@ -115,6 +115,7 @@
     </div>
 </footer>
 
+<script src="public/js/user.js"></script>
 <script src="public/js/utils.js"></script>
 <script src="public/js/http.js"></script>
 <script src="public/js/pageActions.js"></script>
