--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SuperMovies</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+
 
     <!-- Fonts -->
     <style>
@@ -114,18 +114,26 @@
         </ul>
     </div>
 </footer>
-
-<script src="public/js/user.js"></script>
-<script src="public/js/utils.js"></script>
 <script src="public/js/http.js"></script>
+<script src="public/js/utils.js"></script>
+<script src="public/js/form.js"></script>
+<script src="public/js/routes/accueil.js"></script>
+<script src="public/js/routes/connexion.js"></script>
+<script src="public/js/routes/deconnexion.js"></script>
+<script src="public/js/routes/inscription.js"></script>
+<script src="public/js/routes/error.js"></script>
+<script src="public/js/routes/movies.js"></script>
+<script src="public/js/routes/historical.js"></script>
+<script src="public/js/user.js"></script>
 <script src="public/js/pageActions.js"></script>
 <script src="public/js/route.js"></script>
 <script src="public/js/router.js"></script>
 <script src="public/js/app.js"></script>
 
 <!-- Bootstrap -->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <!-- Icons -->
 <script src="https://kit.fontawesome.com/a7cc21547b.js" crossorigin="anonymous"></script>
 
