--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
 
             <li class="media-items">
                 <div class="media-item nav-item">
-                    <a class="facebook-item" href="/facebook">
+                    <a class="facebook-item" href="">
                         <img class="fb-icon icon" src="public/images/ic-facebook.png" alt="icone facebook">
                     </a>
 
-                    <a class="pinterest-item" href="/pinterest">
+                    <a class="pinterest-item" href="">
                         <img class="pint-icon icon" src="public/images/ic-pinterest.png" alt="icone pinterest">
                     </a>
                 </div>
 
                 <div class="media-item nav-item">
-                    <a class="twitter-item" href="/twitter">
+                    <a class="twitter-item" href="">
                         <img class="tw-icon icon" src="public/images/ic-twitter.png" alt="icone twitter">
                     </a>
 
-                    <a class="instagram-item" href="/instagram">
+                    <a class="instagram-item" href="">
                         <img class="inst-icon icon" src="public/images/ic-linkedin.png" alt="icone instagram">
                     </a>
                 </div>
@@ -97,16 +97,15 @@
         </ul>
     </div>
 </footer>
+<script src="public/js/services/template/domService.js"></script>
 <script src="public/js/constants.js"></script>
 <script src="public/js/utils.js"></script>
-<script src="public/js/services/templates/domService.js"></script>
-<script src="public/js/services/templates/templateService.js"></script>
-<script src="public/js/services/templates/forms/formService.js"></script>
-<script src="public/js/services/templates/forms/connexionFormService.js"></script>
-<script src="public/js/services/templates/forms/inscriptionFormService.js"></script>
-<script src="public/js/services/apiService.js"></script>
-<script src="public/js/components/ConnectedHome-component.js"></script>
-<script src="public/js/components/ConnectedNav-component.js"></script>
+<script src="public/js/services/template/form/inscriptionFormService.js"></script>
+<script src="public/js/services/template/connectedHomeService.js"></script>
+<script src="public/js/services/checkUserConnectionService.js"></script>
+<script src="public/js/services/template/connectedNavService.js"></script>
+<script src="public/js/services/template/form/connexionFormService.js"></script>
+<script src="public/js/services/template/form/formService.js"></script>
 <script src="public/js/components/Movie-component.js"></script>
 <script src="public/js/routes/accueil.js"></script>
 <script src="public/js/routes/connexion.js"></script>
@@ -115,6 +114,7 @@
 <script src="public/js/routes/error.js"></script>
 <script src="public/js/routes/movies.js"></script>
 <script src="public/js/routes/historical.js"></script>
+<script src="public/js/services/pageActions.js"></script>
 <script src="public/js/route.js"></script>
 <script src="public/js/router.js"></script>
 <script src="public/js/app.js"></script>
