api connection - done

--- a/index.html
+++ b/index.html
@@ -97,24 +97,25 @@
         </ul>
     </div>
 </footer>
-<script src="public/js/services/template/domService.js"></script>
 <script src="public/js/constants.js"></script>
 <script src="public/js/utils.js"></script>
+<script src="public/js/services/checkUserConnectionService.js"></script>
+<script src="public/js/services/apiService.js"></script>
+<script src="public/js/services/template/domService.js"></script>
+<script src="public/js/services/template/templateService.js"></script>
 <script src="public/js/services/template/form/inscriptionFormService.js"></script>
 <script src="public/js/services/template/connectedHomeService.js"></script>
-<script src="public/js/services/checkUserConnectionService.js"></script>
 <script src="public/js/services/template/connectedNavService.js"></script>
 <script src="public/js/services/template/form/connexionFormService.js"></script>
 <script src="public/js/services/template/form/formService.js"></script>
 <script src="public/js/components/Movie-component.js"></script>
-<script src="public/js/routes/accueil.js"></script>
-<script src="public/js/routes/connexion.js"></script>
-<script src="public/js/routes/deconnexion.js"></script>
+<script src="public/js/routes/home.js"></script>
+<script src="public/js/routes/connection.js"></script>
+<script src="public/js/routes/deconnection.js"></script>
 <script src="public/js/routes/inscription.js"></script>
 <script src="public/js/routes/error.js"></script>
 <script src="public/js/routes/movies.js"></script>
 <script src="public/js/routes/historical.js"></script>
-<script src="public/js/services/pageActions.js"></script>
 <script src="public/js/route.js"></script>
 <script src="public/js/router.js"></script>
 <script src="public/js/app.js"></script>
